--- a/build
+++ b/build
@@ -3,5 +3,5 @@ git init
 git add README.md
 git commit -m "first commit"
 git remote add origin https://github.com/breeve/BreeveLibeventNote.git
-git push -u origin master
+git push  origin master
 
